--- a/lib/style.css
+++ b/lib/style.css
@@ -11,6 +11,13 @@ p code {
   font-size: 0.9em;
 }
 
+blockquote {
+  padding-left: 20px;
+  border-left: 5px solid #ccc;
+  margin-left: 20px;
+  color: #797977;
+}
+
 .site-header {
   border-bottom: 1px solid #ccc;
   height: 60px;
