--- a/lib/style.css
+++ b/lib/style.css
@@ -22,7 +22,7 @@ blockquote {
   border-bottom: 1px solid #ccc;
   height: 60px;
   line-height: 60px;
-  background-color: #fafafa;
+  background-color: #f6f7fa;
   z-index: 10;
   margin-left: 220px;
 }
@@ -62,7 +62,7 @@ blockquote {
   height: 100%;
   overflow-y: auto;
   padding-bottom: 50px;
-  background-color: #535350;
+  background-color: #28323c;
   top: 0px;
 }
 
@@ -95,20 +95,15 @@ blockquote {
   padding-left: 00px;
 }
 
-.sidebar-menu-item.level-3 {
-  padding-left: 10px;
-}
-
-.sidebar-menu-item.level-4 {
-  padding-left: 20px;
-}
-
-.sidebar-menu-item.level-5 {
-  padding-left: 30px;
-}
-
+.sidebar-menu-item.level-3,
+.sidebar-menu-item.level-4,
+.sidebar-menu-item.level-5,
 .sidebar-menu-item.level-6 {
-  padding-left: 40px;
+  padding-left: 10px;
+  font-size: 0.7em;
+  line-height: 1.4;
+  margin-bottom: 5px;
+  display: block;
 }
 
 .content {
